--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-todo",
   "version": "0.1.0",
-  "homepage": "https://lionrouge1.github.io/React-todo",
+  "homepage": "https://LionRouge1.github.io/React-todo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
